--- a/templates/pages/code_solutions/search_solutions.html
+++ b/templates/pages/code_solutions/search_solutions.html
@@ -3,18 +3,318 @@
 
 
 <main>
+
+    <!-- Main Content -->
+    <div class="row mt-1 mb-5 mx-3 p-4" style="border-radius: 10px; border: 1px solid #ededed26; background: linear-gradient(169deg, rgba(255, 255, 255, 0.2) 8.61%, rgba(255, 255, 255, 0.1) 76.57%);">
+       <!-- <p>Welcome to the Tech Career Time coding challenge solutions page! Here, you can easily search for solutions to coding challenges from top platforms like LeetCode, HackerRank, and Project Euler.</p> 
+
+       <p>This page has been designed to be your ultimate companion on your coding journey. With our detailed explanations, you'll not only find the solution but also understand the logic behind it. In each solution page coding challenges are broken down into pseudocode, additionally you will find the actual code, and will be give a thorough explanation of the steps to solve it.</p>
+
+       <p>Whether you're a beginner looking to learn or a pro sharpening your skills, our solutions are crafted to be both educational and engaging. Dive in and explore a world of coding challenges made simple and fun!</p> 
+
+       <p>Happy coding!</p>  -->
+
+       <p>Welcome to the Tech Career Time coding challenge solutions page! Easily search for solutions to challenges from LeetCode, HackerRank, and Project Euler. Each solution is detailed with pseudocode, actual code, and thorough explanations. Whether you're a beginner or a pro, our solutions are educational and engaging.</p>
+
+        <p>Explore a world of coding challenges made simple and fun, Happy coding!</p>
+
+    </div>
+
+    <div class="row mb-4 px-1 pb-4">
+
+        <div class="row px-4">
+            <h1>Search By Platform</h1>
+        </div>
+
+        <div class="col-4 text-center p-3 p-md-4">
+            
+            <a href="#">
+                <img src="/static/img/leetcode-solutions.webp" alt="Words LeetCode with a dark background, featuring a stylized coding symbol in orange and white on the left, and the text 'LeetCode' in a clean, rounded font on the right." class="img-fluid" style="border-radius: 10px; border: 1px solid #ededed26; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);">
+            </a>
+        </div>
+
+        <div class="col-4 text-center p-3 p-md-4">
+            <a href="#">
+                <img src="/static/img/hackerrank-soutions.webp" alt="words HackerRank with a dark background, featuring a stylized coding symbol in green and white on the left, and the text 'HackerRank' in a clean, rounded font on the right." class="img-fluid" style="border-radius: 10px; border: 1px solid #ededed26; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);">
+            </a>
+        </div>
+
+        <div class="col-4 text-center p-3 p-md-4">
+            <a href="#">
+                <img src="/static/img/project-euler-net-soluions.webp" alt="Project Euler words with a white background, featuring a stylized infinity symbol in brown and gray above the text 'Project Euler' in bold brown font, and a pencil icon below with the text '.Net' in white." class="img-fluid" style="border-radius: 10px; border: 1px solid #ededed26; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);">
+            </a>
+        </div>
+
+    </div>
+
+    <!-- <form class="row mx-3 mb-5 px-4 pb-4 pt-2 row-cols-lg-auto g-3 align-items-center" style="border-radius: 10px; border: 1px solid #ededed26; background: linear-gradient(169deg, rgba(255, 255, 255, 0.2) 8.61%, rgba(255, 255, 255, 0.1) 76.57%);" role="search" method="POST" action="{{url_for('search')}}">
+        
+        <div class="col-12 col-lg-12 d-none">
+            <input 
+            class="form-control me-2 search" 
+            type="search" 
+            placeholder="Search" 
+            aria-label="Search"
+            id="search2"
+            name="searched"
+        >   
+        </div>
+        
+        
+        <div class="col">
+            <label class="form-check-label" for="inlineFormSelectPref">
+                <strong>Platform</strong>
+            </label>
+            <select class="form-select" id="inlineFormSelectPref">
+                <option selected>All</option>
+
+                {% for platform in search_filters.platforms %}
+                    <option value="{{ platform }}">{{ platform }}</option>
+                {% endfor %}
+
+            </select>
+        </div>
+
+        <div class="col">
+            <label class="form-check-label" for="inlineFormSelectPref">
+                <strong>Language</strong>
+            </label>
+            <select class="form-select" id="inlineFormSelectPref">
+                <option selected>All</option>
+
+                {% for lang in search_filters.languages %}
+                    <option value="{{ search_filters.languages.lang }}">{{ lang }}</option>
+                {% endfor %}
+                
+            </select>
+        </div>
     
-    <!-- Main content -->
-    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-res"> 
+        
+        <div class="col">
+            <label class="form-check-label" for="inlineFormSelectPref">
+                <strong>Topic</strong>
+            </label>
+            <select class="form-select" id="inlineFormSelectPref">
+                <option selected>All</option>
+                
+                {% for topic in search_filters.topics %}
+                    <option value="{{ topic }}">{{ topic }}</option>
+                {% endfor %}
+
+            </select>
+        </div>
+
+        <div class="col">
+            <label class="form-check-label" for="inlineFormSelectPref">
+                <strong>Sort By</strong>
+            </label>
+            <select class="form-select" id="inlineFormSelectPref">
+                <option selected> ...</option>
+
+                <option value="name">Name</option>
+                
+            </select>
+        </div>
+      
+        <div class="col">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="inlineFormCheck">
+            <label class="form-check-label" for="inlineFormCheck">
+              <strong>Sort By Name</strong>
+            </label>
+          </div>
+        </div>
+    
+    </form> -->
+
+
+    <form class="row mx-3 mb-5 px-4 pb-4 pt-2 row-cols-lg-auto g-3 align-items-center" style="border-radius: 10px; border: 1px solid #ededed26; background: linear-gradient(169deg, rgba(255, 255, 255, 0.2) 8.61%, rgba(255, 255, 255, 0.1) 76.57%);" role="search" method="POST" action="{{url_for('search')}}" id="searchForm">
+        
+        <div class="col-12 col-lg-12 d-none">
+            <input 
+            class="form-control me-2 search" 
+            type="search" 
+            placeholder="Search" 
+            aria-label="Search"
+            id="search2"
+            name="searched"
+        >   
+        </div>
+        
+        
+        <div class="col">
+            <label class="form-check-label" for="platformSelect">
+                <strong>Platform</strong>
+            </label>
+            <select class="form-select" id="platformSelect" name="platform">
+                <option selected>All</option>
+
+                {% for platform in search_filters.platforms %}
+                    <option value="{{ platform }}">{{ platform }}</option>
+                {% endfor %}
+
+            </select>
+        </div>
+
+        <div class="col">
+            <label class="form-check-label" for="languageSelect">
+                <strong>Language</strong>
+            </label>
+            <select class="form-select" id="languageSelect" name="language">
+                <option selected>All</option>
+
+                {% for lang in search_filters.languages %}
+                    <option value="{{ lang }}">{{ lang }}</option>
+                {% endfor %}
+                
+            </select>
+        </div>
+    
+        
+        <div class="col">
+            <label class="form-check-label" for="topicSelect">
+                <strong>Topic</strong>
+            </label>
+            <select class="form-select" id="topicSelect" name="topic">
+                <option selected>All</option>
+                
+                {% for topic in search_filters.topics %}
+                    <option value="{{ topic }}">{{ topic }}</option>
+                {% endfor %}
+
+            </select>
+        </div>
+
+        <div class="col">
+            <label class="form-check-label" for="sortSelect">
+                <strong>Sort By</strong>
+            </label>
+            <select class="form-select" id="sortSelect" name="sort_by">
+                <option selected>...</option>
+
+                <option value="name">Name</option>
+                
+            </select>
+        </div>
+      
+        <!-- <div class="col">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="inlineFormCheck">
+            <label class="form-check-label" for="inlineFormCheck">
+              <strong>Sort By Name</strong>
+            </label>
+          </div>
+        </div> -->
+    
+</form>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const selects = document.querySelectorAll('.form-select');
+        const form = document.getElementById('searchForm');
+        
+        selects.forEach(select => {
+            select.addEventListener('change', function() {
+                form.submit();
+            });
+        });
+    });
+</script>
+
+
+    <!--search-res-Pagination-->
+    {% macro render_pagination() %}
+        <div class="row py-2 pt-5 m-0" id="search-res-Pagination"> 
+            <!-- *PAGINATION* -->
+
+
+            <div class="mx-auto">
+
+                <ul class="m-0 text-center text mt-3 p-0" id="all-pagination-links">
+
+                    <!-- Left arrow to previous page -->
+                    <li>
+                        {% if page_number > 0 %}
+                            <a class="rounded-circle mx-2 pg-nav-active" href="/search_solutions/{{ searched }}/{{ page_number-1 }}">&lt;</a>
+                        {% else %}
+                            <span class="rounded-circle mx-2 pg-nav-active">&lt;</span>
+                        {% endif %}
+                    </li>
+
+                    <!-- current pg / 1st pagination area/number -->
+                    <li>
+                        {% if pg_nav2_var %}
+                            <a class="pg-nav-active" style="{{ page_link_style_nav1 }}" href="/search_solutions/{{ searched }}/{{ pg_nav1_var-1 }}">{{ pg_nav1_var }}</a>
+                        {% else %}
+                            <span class="pg-nav-active" style="{{ page_link_style_nav1 }}">{{ pg_nav1_var }}</span>
+                        {% endif %}
+                    </li>
+
+                    <!-- next/other pg(s) -->
+                    <!-- 2nd & 3rd pagination areas/numbers -->
+                    {% for link in pagination_links %}
+                        <li>
+                            <a class="pg-nav-active" style="{{ link.page_link_style }}" href="/search_solutions/{{ searched }}/{{ link.pg_nav_var-1 }}">{{ link.pg_nav_var }}</a>
+                        </li>
+                    {% endfor %}
+
+                    <!-- 4th pagination area -->
+                    {% if pg_nav3_var and pg_nav4_var %}
+                        <li>
+                            <span>...</span>
+                        </li>
+                    {% endif %}
+
+                    <!-- 5th/last pagination area/number -->
+                    {% if show_last_page_link %}
+                        <li>
+                            <a class="pg-nav-active" style="{{ last_page_link_style }}" href="/search_solutions/{{ searched }}/{{ pg_nav4_var-1 }}">{{ pg_nav4_var }}</a>
+                        </li>
+                    {% endif %}
+
+                    <!-- Right arrow to next pg-->
+                    <!-- res_count/24 = total_page_numbers ; if res_count < total_page_numbers show right arrow -->
+                    <li>
+                        {% if res_count/24 > page_number+1 %}
+                            <a class="rounded-circle mx-2 pg-nav-active" href="/search_solutions/{{ searched }}/{{ page_number+1 }}">&gt;</a>
+                        {% else %}
+                            <span class="rounded-circle mx-2 pg-nav-active">&gt;</span>
+                        {% endif %}
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
+    {% endmacro %}
+
+    
+    <!-- Search Res content -->
+    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-res">
 
         {% for solution in solutions %}
 
-            <div class="col">
-                <a class="card h-100 btn btn-outline-dark p-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);" href="/code_solution/{{solution._id}}">
-                    <div class="card-body" style="padding: 15px;">
-                        <h5 class="card-title text-center" style="font-size: 15px; font-weight: bold;">{{solution.name}}</h5>
-                        <p class="card-text text-center" style="font-size: 12px;">{{solution.site}}</p>
+            <div class="col d-flex">
+                <a class="card flex-fill btn btn-outline-dark p-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);" href="/code_solution/{{solution._id}}">
+
+                    <h5 class="card-title text-center" style="font-size: 15px; font-weight: bold; padding: 15px;">{{solution.name}}</h5>
+
+                    {% if solution.site == "LeetCode" %}
+                        <div class="card-body d-flex flex-column" style="padding: 0px 23% 15px 23%;">
+                            <strong class="card-text text-center rounded py-1 px-2 mt-auto d-inline-block" style="font-size: 12px; background: linear-gradient(to bottom right, orange, rgb(90, 89, 89), black, black, rgb(45, 45, 45)); color: white; font-family: 'Source Code Pro', monospace; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); display: inline-block;">{{solution.site}}</strong>
+                        </div>
+                    {% elif solution.site == "HackerRank" %}
+                        <div class="card-body d-flex flex-column" style="padding: 0px 18% 15px 18%;">
+                            <strong class="card-text text-center rounded py-1 px-2 mt-auto d-inline-block" style="font-size: 12px; background: linear-gradient(to top right, rgb(90, 89, 89), black, black, rgb(45, 45, 45),green,greenyellow ); color: white; font-family: 'Source Code Pro', monospace; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); display: inline-block;">HackerRank</strong>
+                        </div>
+                    {% elif solution.site == "Project Euler" %}
+                    <div class="card-body d-flex flex-column" style="padding: 0px 12% 15px 12%;">
+                        <strong class="card-text text-center rounded py-1 px-2 mt-auto d-inline-block" style="font-size: 12px; background: linear-gradient(to bottom right, rgb(231, 231, 231), white, white, rgb(231, 231, 231), rgb(90, 45, 5)); color: black; border: 0.25px solid rgb(181, 181, 181); font-family: 'Source Code Pro', monospace; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); text-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white, 0 0 20px white, 0 0 25px white, 0 0 30px white, 0 0 35px white; display: inline-block;">ProjectEuler</strong>
                     </div>
+                    {% else %}
+                        <strong class="card-text text-center py-1 px-2 mt-auto d-inline-block" style="font-size: 12px; font-family: 'Source Code Pro', monospace; display: inline-block;">HackerRank</strong>
+                    {% endif %}
+
                 </a>
             </div>
 
@@ -22,69 +322,11 @@
 
     </div>
 
-    <div class="row py-2 pt-5 m-0" id="search-res-Pagination"> <!--search-res-Pagination-->
-        <!-- *PAGINATION* -->
 
 
-        <div class="mx-auto">
-
-            <ul class="m-0 text-center text mt-3 p-0" id="all-pagination-links">
-
-                <!-- Left arrow to previous page -->
-                <li>
-                    {% if page_number > 0 %}
-                        <a class="rounded-circle mx-2 pg-nav-active" href="/search_solutions/{{ searched }}/{{ page_number-1 }}">&lt;</a>
-                    {% else %}
-                        <span class="rounded-circle mx-2 pg-nav-active">&lt;</span>
-                    {% endif %}
-                </li>
-
-                <!-- current pg / 1st pagination area/number -->
-                <li>
-                    {% if pg_nav2_var %}
-                        <a class="pg-nav-active" style="{{ page_link_style_nav1 }}" href="/search_solutions/{{ searched }}/{{ pg_nav1_var-1 }}">{{ pg_nav1_var }}</a>
-                    {% else %}
-                        <span class="pg-nav-active" style="{{ page_link_style_nav1 }}">{{ pg_nav1_var }}</span>
-                    {% endif %}
-                </li>
-
-                <!-- next/other pg(s) -->
-                <!-- 2nd & 3rd pagination areas/numbers -->
-                {% for link in pagination_links %}
-                    <li>
-                        <a class="pg-nav-active" style="{{ link.page_link_style }}" href="/search_solutions/{{ searched }}/{{ link.pg_nav_var-1 }}">{{ link.pg_nav_var }}</a>
-                    </li>
-                {% endfor %}
-
-                <!-- 4th pagination area -->
-                {% if pg_nav3_var and pg_nav4_var %}
-                    <li>
-                        <span>...</span>
-                    </li>
-                {% endif %}
-
-                <!-- 5th/last pagination area/number -->
-                {% if show_last_page_link %}
-                    <li>
-                        <a class="pg-nav-active" style="{{ last_page_link_style }}" href="/search_solutions/{{ searched }}/{{ pg_nav4_var-1 }}">{{ pg_nav4_var }}</a>
-                    </li>
-                {% endif %}
-
-                <!-- Right arrow to next pg-->
-                <!-- res_count/24 = total_page_numbers ; if res_count < total_page_numbers show right arrow -->
-                <li>
-                    {% if res_count/24 > page_number+1 %}
-                        <a class="rounded-circle mx-2 pg-nav-active" href="/search_solutions/{{ searched }}/{{ page_number+1 }}">&gt;</a>
-                    {% else %}
-                        <span class="rounded-circle mx-2 pg-nav-active">&gt;</span>
-                    {% endif %}
-                </li>
-
-            </ul>
-
-        </div>
-    </div>
-
+    <!-- search-res-Pagination BOTTOM -->
+    {{ render_pagination() }}
+    
     <!-- 
 
         TODO: 
