Front End✨ of new Search🔍 pg done

--- a/templates/pages/404.html
+++ b/templates/pages/404.html
@@ -2,11 +2,11 @@
 {% block content2 %}
 
 
-<main>
+<main class="pt-5">
 
     <!-- 1st Content box -->
     <div class="row py-2 m-0">
-        <div class="col-12 m-0">
+        <div class="col-12 m-0 pt-1">
             <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
                 <h1 class="pt-5 px-5">404 Error</h1>
