--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,7 +1,7 @@
 {% extends 'ads.html' %}
 {% block content2 %}
 
-<main>
+<main class="pt-5">
     <!-- 
         About page that will include the following details:
 
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/career-guide.css') }}">
 
     <div class="row py-0 py-md-2 m-0">
-        <div class="col-12 m-0 p-0">
+        <div class="col-12 m-0 p-0 pt-1">
             <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
                 <div class="p-md-5">
 
