--- a/templates/ads.html
+++ b/templates/ads.html
@@ -8,16 +8,17 @@
             <div class="col col-lg-9 px-0 m-0"> <!-- Left content -->
 
              
-                <div class="row py-0 m-0">
+                <!-- <div class="row py-0 m-0">
                     <div class="col-12 m-0">
                         <div class="text-center px-1 pt-0 m-0">
 
-                            <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> <!-- lg Web Ad -->
+                            <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> 
+                                
                                 <div class="pt-1 px-1" >
 
                                 </div>
                             </div>
-                            <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads"> <!-- sm MOB Ad -->
+                            <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads"> 
                                
                             </div>
                             <div class="mob-ad m-0 ads">
@@ -26,7 +27,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 {% block content2 %}{% endblock %}
 
@@ -35,11 +36,11 @@
                     <div class="col-12 m-0">
                         <div class="text-center px-1 pt-0 m-0">
 
-                            <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> <!-- lg Web Ad -->
+                            <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> 
 
 
                             </div>
-                            <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads"> <!-- sm MOB Ad -->
+                            <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads"> 
                                
                             </div>
                             <div class="mob-ad m-0 ads">
