--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,6 @@
 <html lang="en">
     <head>
 
-        
-
         <!-- ***Default Consent*** | Security & Privacy | Consent banner | gtag.js -->
         <!-- <script>
             gtag('consent', 'default', {
@@ -56,7 +54,7 @@
                         .then((response) => response.json())
                         .then((json) =>{ 
                             country = json.country
-                            // console.log(localStorage.getItem("cookieConsent"))
+                            
                             if(country && cookieRestrictiveCountries.has(country)){
                                 // Show Consent Banner
                                 
@@ -105,7 +103,6 @@
                                 // Append outerDiv to body
                                 document.body.appendChild(outerDiv);
                             }
-                            // console.log(country)
                         });
                 }
             }
@@ -242,10 +239,36 @@
                             type="search" 
                             placeholder="Search" 
                             aria-label="Search"
-                            id="search1"
+                            id="search"
                             name="searched"
                         >
 
+                        <!-- 
+                        Adds search query to search/input Field "from URL" if value Exist, ONLY on search_solutions & remove page number
+                    -->
+                    <script>
+                        if(window.location.href.includes('/search_solutions/')){
+
+                            searchQueryPgNumURL = window.location.href.split('/search_solutions/')[1];
+                            
+                            idx = searchQueryPgNumURL.indexOf("%3F")
+                            searched = searchQueryPgNumURL.slice(0, idx); 
+                            
+
+                            if(searched !== "None"){
+                                // Remove/Replace/Decode "%<20|3E|3C|...>"" from searched
+                                searched = decodeURIComponent(searched)
+
+                                searchInputs = document.getElementsByClassName("search")
+                                // add searched to search/input Field
+                                // loop through all search inputs
+                                
+                                for (let i = 0; i < searchInputs.length; i++) {
+                                    searchInputs[i].value = searched;
+                                }
+                            } 
+                        }
+                    </script>
                         
 
                     </form>
@@ -257,7 +280,7 @@
                             <div class="col-4 m-0">
                                 <a 
                                     class="nav-link nav-bar-page-link" 
-                                    href="/search_solutions/None/0"
+                                    href="/search_solutions/None%3Fpage=0"
                                     style="width: 135px;"
                                 >Coding Solutions</a>
                             </div>
@@ -308,7 +331,7 @@
                         </li>
                         <li class="px-2 m-0"><hr class="p-0 m-0" style="color: #CDCCCC;"></li> -->
                         <li class="m-0">
-                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/search_solutions/None/0">Coding Solutions</a>
+                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/search_solutions/None%3Fpage=0">Coding Solutions</a>
                         </li>
                         <li class="px-2 m-0"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
                         <li class="m-0">
@@ -383,7 +406,7 @@
                             <a href="/">Home page</a>
                         </p>
                         <p>
-                            <a href="/search_solutions/None/0">Coding Solutions</a>
+                            <a href="/search_solutions/None%3Fpage=0">Coding Solutions</a>
                         </p>
                         <p>
                             <a href="/swe_career_guide/Education/Getting_Started">SWE Career Guide</a>
@@ -451,45 +474,7 @@
         </footer>
         <!-- Footer -->
 
-        <!-- 
-            Adds search query to search/input Field "from URL" if value Exist, ONLY on search_solutions & remove page number
-        -->
-        <script>
-            if(window.location.href.includes('/search_solutions/')){
-
-                searchQueryPgNumURL = window.location.href.split('/search_solutions/')[1];
-
-                function findIndexes(string, char) { // finds all indexes of a character in a string e.g [1, 3, 5, ...]
-                    return string
-                        .split('')
-                        .map((c, idx) => {
-                            if (c === char) {
-                                return idx;
-                            }
-
-                            return -1;
-                        })
-                        .filter(element => element !== -1);
-                }
-
-                const indexes = findIndexes(searchQueryPgNumURL, '%'); // find all indexes of '/' in the URL
-                // removes the page number in the URL and leaves only the search query
-                searched = searchQueryPgNumURL.slice(0, indexes[indexes.length - 1]); 
-
-                if(searched !== "None"){
-                    // Remove/Replace/Decode "%<20|3E|3C|...>"" from searched
-                    searched = decodeURIComponent(searched)
-
-                    searchInputs = document.getElementsByClassName("search")
-                    // add searched to search/input Field
-                    // loop through all search inputs
-                    console.log(searchInputs)
-                    for (let i = 0; i < searchInputs.length; i++) {
-                        searchInputs[i].value = searched;
-                    }
-                } 
-            }
-        </script>
+        
 
         <!-- my scripts -->
         <script>
@@ -505,12 +490,11 @@
                     
                     iframe[0].style.width = Number(iframe[0].style.width.replace(/[^0-9]+/, '')) + 2 + "px";
 
-                    // console.log(iframe[0].style.height)
+                  
                     iframe[0].style.height = Number(iframe[0].style.height.replace(/[^0-9]+/, '')) + 2 + "px";
-                    // console.log(iframe[0].style.height)
+                 
                     // iframe[0].style.height = iframe[0].style.height *.25;
                     
-                    // console.log(iframe[0].style.cssText);
 
                     // add styles
                     iframe[0].style = iframe[0].style.cssText + "border-radius: 5px; border: 1px solid #000000; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);"
@@ -547,7 +531,6 @@
 
                 codeSolutionYouTubeVideo = document.getElementsByClassName("code-solution-youtube-video");
 
-                console.log(codeSolutionYouTubeVideo)
                 // change width & height Attributes not style of youtube video
                 for (let i = 0; i < codeSolutionYouTubeVideo.length; i++) {
                     codeSolutionYouTubeVideo[i].width = "270";
