--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -6,8 +6,8 @@
 
     <!-- 1st Content box -->
     <div class="row py-2 pb-5 m-0">
-        <div class="col-12 m-0">
-            <div class="p-0 m-0" >
+        <div class="col-12 pt-5 m-0">
+            <div class="p-0 pt-1 m-0" >
 
                 <div class="pb-4"> <!-- Padding for <div> child <a> tag because of style="float: right"-->
                     <div class="row text-center p-3">
@@ -74,7 +74,7 @@
                             <p>
                                 Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
                             </p>
-                            <a href="/search_solutions/None/0" type="button" class="btn btn-outline-dark" style="float: right;">Search now</a>
+                            <a href="/search_solutions/None%3Fpage=0" type="button" class="btn btn-outline-dark" style="float: right;">Search now</a>
                         </div>
 
                         <div class="col-4 d-flex align-items-center justify-content-center" style="position: relative;">
