--- a/templates/pages/sitemap.html
+++ b/templates/pages/sitemap.html
@@ -1,12 +1,12 @@
 {% extends 'ads.html' %}
 {% block content2 %}
 
-<main>
+<main class="pt-5">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/career-guide.css') }}">
 
     <div class="row py-0 py-md-2 m-0">
-        <div class="col-12 m-0 p-0">
+        <div class="col-12 m-0 p-0 pt-1">
             <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
                 <div class="p-md-5">
 
@@ -30,7 +30,7 @@
                         <ol type="A">
                             <li>
                                 <b>
-                                    <a href="/search_solutions/None/0">Coding Solutions</a>
+                                    <a href="/search_solutions/None%3Fpage=0">Coding Solutions</a>
                                 </b>
                                 <ol>
                                     {% for solution in solutions %}
