--- a/templates/pages/code_solutions/code_solution.html
+++ b/templates/pages/code_solutions/code_solution.html
@@ -4,6 +4,9 @@
 <head>
     <!-- Prism e.g. code snippet styles -->
     <link href="../../../static/css/prism.css" rel="stylesheet" />
+    <style>
+        ol ul li { padding-left: 0em !important; }
+    </style>
 </head>
 
 <main class="pt-5">
@@ -104,11 +107,11 @@
                                     {% elif data.tag == "strong" %}
                                         <strong>{{data.content}}</strong>
                                     <!-- {% elif data.tag == "ul" %}
-                                        <ul class="col-12 m-0 py-1 p-5">
+                                        <ul class="col-12 m-0 py-1 p-4">
                                             <li>{{ data.content }}</li>
                                         </ul>
                                     {% elif data.tag == "ol" %}
-                                        <ol class="col-12 m-0 py-1 p-5">
+                                        <ol class="col-12 m-0 py-1 p-4">
                                             <li>{{ data.content }}</li>
                                         </ol> -->
                                     {% endif %}
@@ -181,13 +184,13 @@
                                             {% endfor %}
                                         </strong>
                                     {% elif data.tag == "ul" %}
-                                        <ul class="col-12 m-0 py-1 p-5">
+                                        <ul class="col-12 m-0 py-1 p-4">
                                             {% for item in data.content %}
                                                 {{ render_content(item) }}
                                             {% endfor %}
                                         </ul>
                                     {% elif data.tag == "ol" %}
-                                        <ol class="col-12 m-0 py-1 p-5">
+                                        <ol class="col-12 m-0 py-1 p-4">
                                             {% for item in data.content %}
                                                 {{ render_content(item) }}
                                             {% endfor %}
@@ -210,13 +213,13 @@
                                             {{ render_content(data.content) }}
                                         </li>
                                     {% elif data.tag == "ol" %}
-                                        <ol class="col-12 m-0 py-1 p-5">
+                                        <ol class="col-12 m-0 py-1 p-4">
                                             <li>
                                                 {{ render_content(data.content) }}
                                             </li>
                                         </ol>
                                     {% elif data.tag == "ul" %}
-                                        <ul class="col-12 m-0 py-1 p-5">
+                                        <ul class="col-12 m-0 py-1 p-4">
                                             <li>
                                                 {{ render_content(data.content) }}
                                             </li>
@@ -254,7 +257,7 @@
                                             {{ render_content(data.content) }}
                                         </strong>
                                     <!-- {% elif data.tag == "ul" %}
-                                        <ul class="col-12 m-0 py-1 p-5">
+                                        <ul class="col-12 m-0 py-1 p-4">
                                             <li>
                                                 {{ render_content(data.content) }}
                                             </li>
@@ -290,7 +293,7 @@
                                     <br>
 
                                 {% elif data.tag == "ul" %}
-                                    <ul class="col-12 m-0 py-1 p-5">
+                                    <ul class="col-12 m-0 py-1 p-4">
                                         {% for li in data.content %}
 
                                             <li>{{ li }}</li>
@@ -299,7 +302,7 @@
                                     </ul>
 
                                 {% elif data.tag == "ol" %}
-                                    <ol class="col-12 m-0 py-1 p-5">
+                                    <ol class="col-12 m-0 py-1 p-4">
                                         {% for li in data.content %}
 
                                             <li>{{ li }}</li>
