--- a/templates/pages/code_solutions/search_solutions.html
+++ b/templates/pages/code_solutions/search_solutions.html
@@ -262,9 +262,13 @@
         </div>
     {% endmacro %}
 
+    {% if solutions|length == 0 %}
+        <h2 class="text-center px-5" style="color: rgba(255, 255, 255, 0.664);">Oooppss... 🤖 Looks like we've hit a digital dead end! 🚫🔍 Nothing to see here, folks...</h2>
+        <h4 class="text-center" style="color: rgba(255, 255, 255, 0.664);">Or is there? Let's try that again, shall we?</h4>
+    {% endif %}
     
     <!-- Search Res content -->
-    <div class="pt-4 row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-res">
+    <div class="pt-4 row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0 pb-3" id="search-query-res">
 
         {% for solution in solutions %}
 
@@ -294,7 +298,59 @@
 
         {% endfor %}
 
+
+        
+
     </div>
+
+    <!-- Search Suggestions -->
+    {% if search_suggestions %}
+        <!-- {% if solutions|length != 0 %}
+           
+            <hr class="mx-5 my-3 my-md-4 p-0" style="background: white; color: white; height: 1px;">
+        {% endif %} -->
+        <div class="pt-5" style="margin-left: 18%; margin-right: 18%;">
+            <hr class="mx-5 my-3 my-md-4 p-0" style="background: white; color: white; height: 1px;">
+        </div>
+        <h2 class="text-center" style="color: rgba(255, 255, 255, 0.664);">Suggestions</h2>
+        <div class="pb-4" style="margin-left: 18%; margin-right: 18%;">
+            <hr class="mx-5 my-3 my-md-4 p-0" style="background: white; color: white; height: 1px;">
+        </div>
+
+
+        <div class="pt-3 row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-res">
+        
+            {% for solution in search_suggestions %}
+
+                <div class="col d-flex">
+                    <a class="card flex-fill btn btn-outline-dark p-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);" href="/code_solution/{{solution._id}}">
+
+                        <h5 class="card-title text-center" style="font-size: 15px; font-weight: bold; padding: 15px;">{{solution.name}}</h5>
+
+                        {% if solution.site == "LeetCode" %}
+                            <div class="card-body d-flex flex-column" style="padding: 0px 23% 15px 23%;">
+                                <strong class="card-text text-center rounded py-1 px-2 mt-auto d-inline-block" style="font-size: 12px; background: linear-gradient(to bottom right, orange, rgb(90, 89, 89), black, black, rgb(45, 45, 45)); color: white; font-family: 'Source Code Pro', monospace; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); display: inline-block;">{{solution.site}}</strong>
+                            </div>
+                        {% elif solution.site == "HackerRank" %}
+                            <div class="card-body d-flex flex-column" style="padding: 0px 18% 15px 18%;">
+                                <strong class="card-text text-center rounded py-1 px-2 mt-auto d-inline-block" style="font-size: 12px; background: linear-gradient(to top right, rgb(90, 89, 89), black, black, rgb(45, 45, 45),green,greenyellow ); color: white; font-family: 'Source Code Pro', monospace; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); display: inline-block;">HackerRank</strong>
+                            </div>
+                        {% elif solution.site == "Project Euler" %}
+                        <div class="card-body d-flex flex-column" style="padding: 0px 12% 15px 12%;">
+                            <strong class="card-text text-center rounded py-1 px-2 mt-auto d-inline-block" style="font-size: 12px; background: linear-gradient(to bottom right, rgb(231, 231, 231), white, white, rgb(231, 231, 231), rgb(90, 45, 5)); color: black; border: 0.25px solid rgb(181, 181, 181); font-family: 'Source Code Pro', monospace; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); text-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white, 0 0 20px white, 0 0 25px white, 0 0 30px white, 0 0 35px white; display: inline-block;">ProjectEuler</strong>
+                        </div>
+                        {% else %}
+                            <strong class="card-text text-center py-1 px-2 mt-auto d-inline-block" style="font-size: 12px; font-family: 'Source Code Pro', monospace; display: inline-block;">HackerRank</strong>
+                        {% endif %}
+
+                    </a>
+                </div>
+
+            {% endfor %}
+
+        </div>
+    {% endif %}
+   
 
     <!-- search-res-Pagination BOTTOM -->
     {{ render_pagination() }}
